updates url scopes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#1111ff" />
+  <link rel="canonical" href="https://pateodocollegio.github.io/qrcodepateo/" />
   <link rel="manifest" href="/qrcodepateo/manifest.json">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
