--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-3">Welcome to Pateo do Collegio</h1>
+      <div class="row">
+        <div class="col align-self-center">
+          <img src="images/icons/icon-384x384.png" alt="logo do pateo do collegio">
+        </div>
+      </div>
       <p class="lead">Where São Paulo started</p>
       <hr class="my-2">
       <p>More information</p>
