--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="jumbotron jumbotron-fluid">
-    <div class="container">
+    <div class="container-fluid">
       <h2 class="display-4">Welcome to Pateo do Collegio</h2>
       <div class="row">
         <div class="col align-self-center">
