sets content depends on page's name

--- a/cripta.html
+++ b/cripta.html
@@ -26,7 +26,6 @@
     <hr class="my-2">
     <p>More information</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button" onclick="goToCripta()">Cripta</a>
       <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button" onclick="goToIndex()">Home</a>
     </p>
   </div>
@@ -44,6 +43,7 @@
   <script src="/qrcodepateo/test-service-worker.js"></script>
   <script src="/qrcodepateo/service-worker.js"></script>
   <script src="/qrcodepateo/navigation.js"></script>
+  <script src="/qrcodepateo/content.js"></script>
   <script src="/qrcodepateo/language.js"></script>
   <script src="/qrcodepateo/cripta.js"></script>
 </body>
