--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
 <body>
   <div class="container-fluid">
-    <h2 class="display-4">Welcome to Pateo do Collegio</h2>
+    <h2 class="display-4" id="ctWelcome">Welcome to Pateo do Collegio</h2>
     <div class="row">
       <div class="col align-self-center">
         <img src="images/icons/icon-384x384.png" alt="logo do pateo do collegio">
       </div>
     </div>
-    <p class="lead">Where São Paulo started</p>
+    <p class="lead" id="ctLead">Where São Paulo started</p>
     <hr class="my-2">
-    <p>More information</p>
+    <p id="ctMoreInfo">More information</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Cripta</a>
+      <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button" onclick="goToCripta()">Cripta</a>
     </p>
   </div>
   <!-- Optional JavaScript -->
@@ -42,6 +42,10 @@
     crossorigin="anonymous"></script>
   <script src="/qrcodepateo/test-service-worker.js"></script>
   <script src="/qrcodepateo/service-worker.js"></script>
+  <script src="/qrcodepateo/navigation.js"></script>
+  <script src="/qrcodepateo/content.js"></script>
+  <script src="/qrcodepateo/language.js"></script>
+  <script src="/qrcodepateo/index.js"></script>
 </body>
 
 </html>
