--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <hr class="my-2">
     <p id="ctMoreInfo">More information</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button" onclick="goToCripta()">Cripta</a>
+      <a class="btn btn-primary btn-lg" href="cripta.html" role="button">Cripta</a>
     </p>
   </div>
   <!-- Optional JavaScript -->
