--- a/cripta.html
+++ b/cripta.html
@@ -26,7 +26,7 @@
     <hr class="my-2">
     <p>More information</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button" onclick="goToIndex()">Home</a>
+      <a class="btn btn-primary btn-lg" href="index.html" role="button">Home</a>
     </p>
   </div>
   <!-- Optional JavaScript -->
