--- a/cripta.html
+++ b/cripta.html
@@ -16,18 +16,18 @@
 
 <body>
   <div class="container-fluid">
-    <h2 class="display-4">Cripta Pateo do Collegio</h2>
+    <h2 class="display-4" id="ctWelcome">Cripta Pateo do Collegio</h2>
     <div class="row">
       <div class="col align-self-center">
         <img src="images/icons/icon-384x384.png" alt="logo do pateo do collegio">
       </div>
     </div>
-    <p class="lead">Famous people are buried here</p>
+    <p class="lead" id="ctLead">Famous people are buried here</p>
     <hr class="my-2">
-    <p>More information</p>
-    <p class="lead">
-      <a class="btn btn-primary btn-lg" href="index.html" role="button">Home</a>
-    </p>
+    <p id="ctMoreInfo">More information</pid="ctMoreInfo">
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" href="index.html" role="button">Home</a>
+      </p>
   </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
