--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     <p id="ctMoreInfo">More information</p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="cripta.html" role="button">Cripta</a>
+      <a class="btn btn-primary btn-lg" href="oratorio.html" role="button">Oratory</a>
+      <a class="btn btn-primary btn-lg" href="biblioteca.html" role="button">Library</a>
+      <a class="btn btn-primary btn-lg" href="pinacoteca.html" role="button">Gallery</a>
+      <a class="btn btn-primary btn-lg" href="maquete.html" role="button">Old City Model</a>
+      <a class="btn btn-primary btn-lg" href="igreja.html" role="button">Church</a>
+      <a class="btn btn-primary btn-lg" href="orgao.html" role="button">Organ</a>
+      <a class="btn btn-primary btn-lg" href="taipa.html" role="button">Ancient wall</a>
     </p>
   </div>
   <!-- Optional JavaScript -->
