--- a/igreja.html
+++ b/igreja.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Igreja - Pateo do Collegio</title>
+  <title>Church - Pateo do Collegio</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,7 +16,7 @@
 
 <body>
   <div class="container-fluid">
-    <h2 class="display-4" id="ctWelcome">Igreja Pateo do Collegio</h2>
+    <h2 class="display-4" id="ctWelcome">Church Pateo do Collegio</h2>
     <div class="row">
       <div class="col align-self-center">
         <img src="images/icons/icon-384x384.png" alt="logo do pateo do collegio">
